bad/bin_op_ne_string_void.example_compiler_output
ERROR
[1mbad/bin_op_ne_string_void.lat:4:5: [1;31merror: [0;1moperator != cannot compare values of types `string` and `void` because values are not convertible to either of the two types[m
	"" != foo();
	   [1;32m^[m
